<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".view.GameEditActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <FrameLayout
                android:id="@+id/gameEdit_changeImageButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:background="@drawable/rounded_button"
                android:elevation="2dp"
                android:paddingTop="-10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="40sp"
                android:translationY="50dp"
                app:layout_constraintBottom_toTopOf="@+id/gameEdit_frame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:foregroundGravity="center"
                    android:src="@drawable/ic_camera" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/gameEdit_imageContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:visibility="gone"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:id="@+id/gameEdit_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:cropToPadding="true"
                        android:foregroundGravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/game_detail_bgexample" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/gameEdit_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_text_box"
                android:backgroundTint="@color/theme_red"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_text_box"
                    android:backgroundTint="@color/white"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/gameEdit_name"
                        style="@style/lg_textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:hint="@string/name">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/lg_textInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            tools:text="Mortal Kombat X" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/gameEdit_release"
                        style="@style/lg_textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/created">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/lg_textInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="2018" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/gameEdit_description"
                        style="@style/lg_textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/lg_textInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="5"
                            android:singleLine="false"
                            tools:text="Mortal Kombat bla bla bla\n\nEm 2011 bla bla bla" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/gameEdit_saveButton"
                        style="@style/button_std"
                        android:layout_marginTop="40dp"
                        android:text="SAVE GAME" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>